# daisy

./: README.md  pyproject.toml
.claude/: settings.local.json
docs/plans/: 2026-03-07-daisy-design.md  2026-03-07-daisy-implementation.md
src/daisy/: __init__.py  __main__.py  optimize.py  types.py
tests/: conftest.py  test_optimize.py  test_types.py
